[gd_scene load_steps=3 format=1]

[ext_resource path="res://Themes/lbl.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Controls.gd" type="Script" id=2]

[node name="Container" type="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 70.0
margin/bottom = 70.0
script/script = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]

z/z = 1

[node name="Panel" type="Panel" parent="Node2D"]

visibility/opacity = 0.2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 70.0
margin/bottom = 70.0

[node name="Node2D1" type="Node2D" parent="."]

z/z = 1

[node name="Left" type="Button" parent="Node2D1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 25.0
margin/right = 20.0
margin/bottom = 47.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Up" type="Button" parent="Node2D1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = 0.0
margin/right = 45.0
margin/bottom = 22.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Right" type="Button" parent="Node2D1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 25.0
margin/right = 70.0
margin/bottom = 47.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Down" type="Button" parent="Node2D1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = 50.0
margin/right = 45.0
margin/bottom = 72.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
flat = false

[connection signal="pressed" from="Node2D1/Left" to="." method="_on_Left_pressed"]

[connection signal="pressed" from="Node2D1/Up" to="." method="_on_Up_pressed"]

[connection signal="pressed" from="Node2D1/Right" to="." method="_on_Right_pressed"]

[connection signal="pressed" from="Node2D1/Down" to="." method="_on_Down_pressed"]


